[package]
edition = "2021"
name = "adafruit-feather-thinkink-discovery"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

adafruit-feather-rp2040 = "0.8.0"
embedded-graphics = "0.8.1"
panic-probe = { version = "1", features = ["print-defmt"] }
defmt = "1"
defmt-rtt = "1"

[dev-dependencies]
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"
ssd1681 = "0.3.0"
format_no_std = "1.2.0"
tinybmp = "0.6.0"
bme280 = "0.5.1"
ssd1306 = "0.9.0"
heapless = "0.8.0"
usb-device = "0.3.1"
usbd-serial = "0.2.2"
log = "0.4.20"
critical-section = "1.1.2"
defmt-bbq = "0.1.0"
bbqueue = { version = "0.5.1", features = ["thumbv6"] }
embedded-hal-bus = "0.3.0"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.10", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
